fix styling glitches
Clear font-weight on body.
Remove y margins on search button (in nav) - this messed up
the alignment of the search button and the search field
on narrow devices.

--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -5,7 +5,6 @@ body {
 
 body {
     padding-top: 76px;
-    font-weight: 500;
     background-color: white;
     background: white url('../img/noise-pattern.png') repeat;
     color: #222;
@@ -65,7 +64,7 @@ h2 {
     /*text-transform: lowercase;*/
     /*font-variant: small-caps;*/
     font-size: 1.05rem;
-    font-weight: 700;
+    font-weight: 500;
     color: #FFFAFA; /* Snow White */
 }
 
